    HttpServletResponse
  - Added screen and transition render tests for the System and Tools apps
  - All XML Form field widgets now support expansion in tooltip string
  - When a form-single is rendered the form map is added to a pushed
    (isolated) context and popped after; field values can now be referenced
    directly in expressions in @condition, @text, etc attributes
- Integration Features
  - New Service REST API tool
    - define REST resources and methods in XML files (see rest-api-1.6.xsd)
    - map methods under resources to service calls and entity operations
    - REST resource/id visits are pushed as artifacts so authz may be
      granted for parts or all of a REST API by the API instead of by
      underlying service or entity
    - see example Service REST API in example.rest.xml
    - call REST methods through the /rest/s1 transition
    - see example client calls in the rest.xml screen definition file
    - get Swagger API definition from /rest/service.swagger
    - get RAML API definition from /rest/service.raml
  - Added Swagger UI 2.1.4, with links from Tools app
    - browse REST API details from generated Swagger
    - call REST API services
    - use new Login Key functionality with api_key for authentication
  - New RestClient API, available through ec.service.rest(), with various
    options for doing HTTP requests and parsing response
  - Added json-schema for Entity REST API: for all entities get
    /rest/entity.json, for a single entity get /rest/entity.json/${name}.json
  - Added RAML API definition for Entity REST API at /rest/entity.raml
  - Added Swagger API definition for Entity REST API at /rest/entity.swagger
  - Entity REST API supports master definitions through
    /rest/m1/${entity}/${master} or /rest/v1/${entity}?master=${master};
    see comments in the rest.xml screen definition XML file for examples
  - Added RAML API definition for Entity Master REST API at /rest/master.raml